# behavior-judge

./: README.md  pyproject.toml
.github/workflows/: ci.yml
behavior_judge/: models.py
behavior_judge/analyzer/: behavior_analyzer.py  judgment_engine.py
behavior_judge/ingestion/: replay_loader.py
behavior_judge/law_researcher/: jurisdiction.py  law_db.json  researcher.py
behavior_judge/reporting/: report_generator.py
behavior_judge/scoring/: scorer.py
examples/: run_example.py
reports/: highway-merge-001.html  highway-merge-001.json
scenarios/sample/: metadata.json  telemetry.csv
tests/: test_judgment_engine.py  test_law_researcher.py
