[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "behavior-judge"
version = "0.1.0"
description = "LLM-as-Oracle for autonomous vehicle behavior evaluation — runs fully local, no API key required"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0",
    "pydantic>=2.0",
    "geopy>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["behavior_judge"]
